@@ -138,13 +138,13 @@ OPT(Sd)
 \fBd\fPiamond.  \fIsize\fP is diameter of circumscribing circle.
 .TP
 OPT(Se)
-\fBe\fPllipse.  Direction (in degrees counter-clockwise from horizontal), semi-major_axis, and semi-minor_axis must
+\fBe\fPllipse.  Direction (in degrees counter-clockwise from horizontal), major_axis, and minor_axis must
 be found in columns 3, 4, and 5.
 .TP
 OPT(SE)
 Same as OPT(Se), except azimuth (in degrees east of north) should be given instead of direction.  The azimuth will
 be mapped into an angle based on the chosen map projection (OPT(Se) leaves the directions
-unchanged.)  Furthermore, the semi-axes lengths must be given in km instead of plot-distance units.  An exception occurs for
+unchanged.)  Furthermore, the axes lengths must be given in km instead of plot-distance units.  An exception occurs for
 a linear projection in which we assume the ellipse axes are given in the same units as OPT(R).
 .TP
 OPT(Sf)
